# mqttnotifier

./: mqttnotifier.py  pyproject.toml
